--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+TCGA_LUSC_TPM.txt filter=lfs diff=lfs merge=lfs -text
 *.RData filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
